# PhysMetrics.Weather

./: LICENCE  LICENSE  README.md  pyproject.toml
Notebook/: ablation_ifs_graphcast_comprehensive.ipynb
Notebook/Data/Ablation_Tv/: physics_evaluation_graphcast_2020.csv  physics_evaluation_hres_2020.csv  time_series_graphcast_2020.csv  time_series_hres_2020.csv
Notebook/Data/Ablation_sp/Hypsometric/: physics_evaluation_ifs_ablation_hypso_2020_ifs.csv  time_series_ifs_ablation_hypso_2020_ifs.csv
Notebook/Data/Ablation_sp/Reference_sp/: physics_evaluation_ifs_ablation_refsp_2020_ifs.csv  time_series_ifs_ablation_refsp_2020_ifs.csv
Notebook/Data/ERA5/: physics_evaluation_graphcast_2020.csv  physics_evaluation_hres_2020.csv  time_series_graphcast_2020.csv  time_series_hres_2020.csv
Notebook/Data/IFS/: physics_evaluation_graphcast_2020.csv  physics_evaluation_hres_2020.csv  time_series_graphcast_2020.csv  time_series_hres_2020.csv
src/PhysBench/: physics_metrics.py  plot_metrics.py  run_all_metrics.py
src/PhysEval.Weather/: physics_metrics.py  plot_neurips_metrics.py
src/physeval_weather/: physics_metrics.py  run_all_metrics.py
src/physmetrics_weather/: plot_neurips_metrics.py  run_all_metrics.py
