[project]
name = "physical-consistency-benchmark"
version = "0.1.0"
description = "Physics metrics for evaluating AI weather models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "xarray",
    "matplotlib",
    "seaborn",
    "scipy",
    "pyshtools",
    "zarr",
    "gcsfs",
]

[project.scripts]
wb-eval = "physical_consistency_benchmark.run_physics_evaluation:main"
wb-spectrum = "physical_consistency_benchmark.run_spectrum:main"
wb-summarize = "physical_consistency_benchmark.summarize_physics_metrics:main"
wb-plot-ts = "physical_consistency_benchmark.plot_timeseries:main"
wb-plot-table = "physical_consistency_benchmark.plot_summary_table:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"