[project]
name = "physeval-weather"
version = "0.1.0"
description = "Physics metrics for evaluating AI weather models"
readme = "README.md"
license = { text = "MIT" }
dependencies = [    "numpy",
    "pandas",
    "xarray",
    "dask",
    "matplotlib",
    "seaborn",
    "scipy",
    "zarr", 
    "gcsfs"
]

[project.scripts]
physeval-run = "physeval_weather.run_all_metrics:main"
physeval-plot = "physeval_weather.plot_neurips_metrics:main"

[tool.hatch.build.targets.wheel]
packages = ["src/physeval_weather"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
